fix: :bug: fix overflow

--- a/src/scss/base/_normalize.scss
+++ b/src/scss/base/_normalize.scss
@@ -1,4 +1,4 @@
 @use "sass:math";
-html {overflow:hidden;}
+html {overflow-x:hidden;}
 
 
